--- a/internal/web/index.html
+++ b/internal/web/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>GoSpeed Test</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="p-4 bg-light text-center">
-  <h2>GoSpeed Network Test</h2>
-  <button id="startBtn" class="btn btn-primary mt-3">Start Test</button>
-  <div id="output" class="mt-4"></div>
+
+<body class="p-6 bg-gray-100 text-center">
+  <h2 class="text-2xl font-semibold text-gray-800">GoSpeed Network Test</h2>
+  <button id="startBtn" class="mt-4 px-6 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition">
+    Start Test
+  </button>
+  <div id="output" class="mt-6 text-lg text-gray-700"></div>
 
   <script src="script.js"></script>
 </body>
+
 </html>
