--- a/internal/web/index.html
+++ b/internal/web/index.html
@@ -18,6 +18,11 @@
     GO
   </button>
 
+  <!-- Loading Spinner -->
+  <div id="spinner" class="hidden mt-8">
+    <div class="w-12 h-12 border-4 border-cyan-400 border-t-transparent rounded-full animate-spin"></div>
+  </div>
+
   <!-- Results Card -->
   <div id="output"
     class="mt-10 hidden border border-green-500 rounded-xl p-6 flex flex-col md:flex-row justify-between items-center w-full max-w-2xl bg-[#131722]">
