spinner around go button

--- a/internal/web/index.html
+++ b/internal/web/index.html
@@ -12,41 +12,47 @@
     GoSpeed Network Test
   </h2>
 
-  <!-- GO Button -->
-  <button id="startBtn"
-    class="w-32 h-32 flex items-center justify-center rounded-full border-2 border-cyan-400 text-xl font-semibold text-white hover:scale-105 transition-transform duration-200 shadow-[0_0_10px_rgba(0,255,255,0.3)]">
-    GO
-  </button>
+  <!-- GO Button with Spinner Ring -->
+  <div class="relative w-40 h-40 flex items-center justify-center">
+    <button id="startBtn"
+      class="w-32 h-32 flex items-center justify-center rounded-full border-2 border-cyan-400 text-xl font-semibold text-white hover:scale-105 transition-transform duration-200 shadow-[0_0_10px_rgba(0,255,255,0.3)]">
+      GO
+    </button>
 
-  <!-- Loading Spinner -->
-  <div id="spinner" class="hidden mt-8">
-    <div class="w-12 h-12 border-4 border-cyan-400 border-t-transparent rounded-full animate-spin"></div>
+    <!-- Loading Spinner as outer ring -->
+    <div id="spinner" class="hidden pointer-events-none absolute inset-0">
+      <div class="w-full h-full flex items-center justify-center">
+        <div class="w-40 h-40 border-4 border-cyan-400/40 border-t-transparent rounded-full animate-spin"></div>
+      </div>
+    </div>
   </div>
 
   <!-- Results Card -->
   <div id="output"
-    class="mt-10 hidden border border-green-500 rounded-xl p-6 flex flex-col md:flex-row justify-between items-center w-full max-w-2xl bg-[#131722]">
-    <div class="flex flex-col items-center m-4">
+    class="mt-10 hidden border border-green-500 rounded-xl p-6 w-full max-w-2xl bg-[#131722]">
+    <div class="flex flex-col md:flex-row justify-between items-center w-full">
+      <div class="flex flex-col items-center m-4">
       <span class="text-green-400 text-sm uppercase tracking-wider">Ping</span>
       <span class="text-3xl font-bold text-gray-100" id="pingVal">0</span>
       <span class="text-xs text-gray-400">ms</span>
-    </div>
+      </div>
 
-    <div class="flex flex-col items-center m-4">
+      <div class="flex flex-col items-center m-4">
       <span class="text-green-400 text-sm uppercase tracking-wider">Download</span>
       <span class="text-3xl font-bold text-gray-100" id="downVal">0</span>
       <span class="text-xs text-gray-400">Mbps</span>
-    </div>
+      </div>
 
-    <div class="flex flex-col items-center m-4">
+      <div class="flex flex-col items-center m-4">
       <span class="text-green-400 text-sm uppercase tracking-wider">Upload</span>
       <span class="text-3xl font-bold text-gray-100" id="upVal">0</span>
       <span class="text-xs text-gray-400">Mbps</span>
-    </div>
+      </div>
 
-    <div class="flex flex-col items-center m-4">
+      <div class="flex flex-col items-center m-4">
       <span class="text-blue-400 text-sm uppercase tracking-wider">Test Time</span>
       <span class="text-xl font-bold text-gray-100" id="timestamp">--</span>
+      </div>
     </div>
   </div>
 
