--- a/internal/web/index.html
+++ b/internal/web/index.html
@@ -22,7 +22,7 @@
     <!-- Loading Spinner as outer ring -->
     <div id="spinner" class="hidden pointer-events-none absolute inset-0">
       <div class="w-full h-full flex items-center justify-center">
-        <div class="w-40 h-40 border-4 border-cyan-400/40 border-t-transparent rounded-full animate-spin"></div>
+        <div class="w-40 h-40 border-2 border-cyan-400 border-t-transparent rounded-full animate-spin"></div>
       </div>
     </div>
   </div>
