save results to csv and display latest 5

--- a/internal/web/index.html
+++ b/internal/web/index.html
@@ -56,6 +56,9 @@
     </div>
   </div>
 
+  <!-- History Card -->
+  <div id="history" class="mt-8 w-full max-w-2xl"></div>
+
   <script src="script.js"></script>
 </body>
 
