--- a/internal/web/index.html
+++ b/internal/web/index.html
@@ -8,13 +8,38 @@
 </head>
 
 <body class="bg-[#0f1117] text-gray-200 min-h-screen p-6 relative">
-  <button id="settingsBtn" class="absolute top-6 right-6">
-    <svg class="w-6 h-6 text-gray-400 hover:text-cyan-400 transition-colors" aria-hidden="true"
-      xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+  <button id="settingsBtn" class="absolute top-6 right-6 p-2">
+    <svg class="w-8 h-8 text-gray-400 hover:text-cyan-400 transition-colors" aria-hidden="true"
+      xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="none" viewBox="0 0 24 24">
       <path stroke="currentColor" stroke-linecap="round" stroke-width="2"
         d="M20 6H10m0 0a2 2 0 1 0-4 0m4 0a2 2 0 1 1-4 0m0 0H4m16 6h-2m0 0a2 2 0 1 0-4 0m4 0a2 2 0 1 1-4 0m0 0H4m16 6H10m0 0a2 2 0 1 0-4 0m4 0a2 2 0 1 1-4 0m0 0H4" />
     </svg>
   </button>
+
+  <!-- Settings Modal -->
+  <div id="settingsModal" class="hidden fixed inset-0 z-50 items-center justify-center bg-black bg-opacity-50">
+    <div class="flex h-full items-center justify-center p-4">
+      <div class="bg-[#131722] border border-gray-700 rounded-xl w-full max-w-md">
+        <div class="p-6 border-b border-gray-700">
+          <h3 class="text-xl font-semibold text-gray-100">Set Speedtest Frequency</h3>
+        </div>
+        <div class="p-6">
+          <label class="block text-sm font-medium text-gray-100 mb-2">Frequency</label>
+          <select id="frequencySelect" class="w-full p-2 bg-[#171c27] border border-gray-700 rounded-md text-gray-100">
+            <option value="1">Every Hour</option>
+            <option value="3">Every 3 Hours</option>
+            <option value="6">Every 6 Hours</option>
+            <option value="12">Every 12 Hours</option>
+            <option value="24">Every 24 Hours</option>
+          </select>
+        </div>
+        <div class="p-6 flex gap-3">
+          <button id="cancelBtn" class="flex-1 p-2 bg-[#171c27] hover:bg-gray-800 border border-gray-700 rounded-md text-gray-100">Cancel</button>
+          <button id="saveBtn" class="flex-1 p-2 bg-cyan-500 hover:bg-cyan-600 rounded-md text-white transition-colors">Save</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="flex flex-col items-center justify-center min-h-screen">
     <h2 class="text-3xl font-semibold text-gray-100 mb-10 tracking-wide">
